[gd_scene load_steps=4 format=3 uid="uid://cwlq2owq8ue0o"]

[ext_resource type="Script" path="res://scripts/inventory_slot.gd" id="1_v62va"]
[ext_resource type="Script" path="res://scripts/slot_area.gd" id="2_fbb83"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rceov"]
size = Vector2(100, 100)

[node name="InventorySlot" type="PanelContainer" node_paths=PackedStringArray("slot_area")]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v62va")
slot_area = NodePath("Area2D")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemIcon" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ItemCounter" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 21
horizontal_alignment = 2
vertical_alignment = 2

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("2_fbb83")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(50, 50)
shape = SubResource("RectangleShape2D_rceov")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
